--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Parks</title>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
+	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css">
 	<link rel="stylesheet" href="parks.css">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
+	<script src="lib/angular/angular.min.js"></script>
 </head>
 <body>
 	<div class="container" ng-app="ParksApp" ng-controller="ParksController">
@@ -46,9 +46,9 @@
 			</section>
 		</div>
 	</div>
-	<script src="http://code.jquery.com/jquery-2.1.1.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="lib/jquery/dist/jquery.js"></script>
+	<script src="lib/lodash/dist/lodash.js"></script>
+	<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="parks.js"></script>
 </body>
 </html>
