Grunt working properly

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,8 @@
 <html>
 <head>
 	<title>Parks</title>
-	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css">
-	<link rel="stylesheet" href="parks.css">
-	<script src="lib/angular/angular.min.js"></script>
+	<link rel="stylesheet" href="_inc/parks.css">
+	<script src="_inc/parks.js"></script>
 </head>
 <body>
 	<div class="container" ng-app="ParksApp" ng-controller="ParksController">
@@ -46,9 +44,5 @@
 			</section>
 		</div>
 	</div>
-	<script src="lib/jquery/dist/jquery.js"></script>
-	<script src="lib/lodash/dist/lodash.js"></script>
-	<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="parks.js"></script>
 </body>
 </html>
