parks puzzle dropdown menu WIP

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,11 @@
 			</section>
 		</div>
 		<div class="row">
+			<section class="col-xs-12 form-inline">
+				<select ng-model="puzzleChose" class="form-control" ng-options="singlePuzzle.id for singlePuzzle in availablePuzzles" ng-change="choosePuzzle(singlePuzzle.id)"></select>
+			</section>
+		</div>
+		<div class="row">
 			<section class="col-xs-12">
 				<button class="btn btn-danger"
 					ng-click="solvePuzzle()"><i class="fa fa-key"></i> Solve</button>
