parks.js own file

--- a/src/tests/tests.html
+++ b/src/tests/tests.html
@@ -12,6 +12,7 @@
 	<div id="qunit-fixture"></div>
 	<!-- lib scripts -->
 	<script src="../lib/qunit/qunit/qunit.js"></script>
+	<script src="_inc/lib.js"></script>
 
 	<!-- component script -->
 	<script src="_inc/parks.js"></script>
