added a puzzle selector

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="row">
 			<section class="col-xs-12 form-inline">
-				<select ng-model="puzzleChose" class="form-control" ng-options="singlePuzzle.id for singlePuzzle in availablePuzzles" ng-change="choosePuzzle(singlePuzzle.id)"></select>
+				<select ng-model="puzzleChose" class="form-control" ng-options="singlePuzzle.id for singlePuzzle in availablePuzzles" ng-change="choosePuzzle()"></select>
 			</section>
 		</div>
 		<div class="row">
