--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- for Bootstrap -->
 	<title>Parks</title>
+	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="_inc/parks.css">
 	<script src="_inc/angular.js"></script>
 </head>
@@ -39,7 +42,7 @@
 		</div>
 		<div class="row">
 			<section class="col-xs-12 form-inline">
-				<select ng-model="puzzleChose" class="form-control" ng-options="singlePuzzle.id for singlePuzzle in availablePuzzles" ng-change="choosePuzzle()"></select>
+				<label>Puzzle No. </label> <select ng-model="puzzleChose" class="form-control" ng-options="singlePuzzle.id for singlePuzzle in availablePuzzles" ng-change="choosePuzzle()"></select>
 			</section>
 		</div>
 		<div class="row">
