--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,6 @@
 			</section>
 		</div>
 	</div>
-	<script src="_inc/lib.js"></script>
-	<script src="_inc/parks.js"></script>
+	@@javascriptReplaceFiles
 </body>
 </html>
