All puzzles work! Including a two tree puzzle!

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		<div class="row">
 			<section class="col-xs-12 puzzle">
 				<table>
-					<caption>Puzzle No. {{puzzle.id}}</caption>
+					<caption>Puzzle: {{puzzle.id}}</caption>
 					<tbody>
 						<tr ng-repeat="row in puzzle.getRows()">
 							<td ng-repeat="cell in row.cells"
