Solving works with delay

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="row">
 			<section class="col-xs-12">
-				<button class="btn btn-danger"
+				<button id="solveBtn" class="btn btn-danger"
 					ng-click="solvePuzzle()"><i class="fa fa-key"></i> Solve</button>
 			</section>
 		</div>
