--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 				</table>
 			</section>
 		</div>
-		<div class="row">
+		<div class="row top-buffer">
 			<section class="col-xs-12">
 				<button id="solveBtn" class="btn btn-danger"
 					ng-click="solvePuzzle()"><i class="fa fa-key"></i> Solve</button>
