--- a/src/tests/tests.html
+++ b/src/tests/tests.html
@@ -4,21 +4,21 @@
 	<meta charset="utf-8">
 	<title>Parks Unit Tests</title>
 	<link rel="stylesheet" href="../lib/qunit/qunit/qunit.css">
-	<link rel="stylesheet" href="_inc/parks.css">
-	<script src="_inc/angular.js"></script>
+	<link rel="stylesheet" href="inc/parks.css">
+	<script src="inc/angular.js"></script>
 </head>
 <body>
 <div id="qunit" style="display:none"></div>
 	<div id="qunit-fixture"></div>
 	<!-- lib scripts -->
 	<script src="../lib/qunit/qunit/qunit.js"></script>
-	<script src="_inc/lib.js"></script>
+	<script src="inc/lib.js"></script>
 
 	<!-- component script -->
-	<script src="_inc/parks.js"></script>
+	<script src="inc/parks.js"></script>
 
 	<!-- test scripts -->
-	<script src="_inc/tests.js"></script>
+	<script src="inc/tests.js"></script>
 
 
 	<script>
